# ZPR_project-Unexplored-inspired_game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  rebuild.sh
header/: Action.h  Angle.h  Constants.h  Entity.h  GameController.h  InputHandler.h  Item.h  ObjectClasses.h  PhysicalObject.h  Player.h  Renderer.h  State.h
scripts/: download_dependencies.sh
src/: Angle.cpp  CMakeLists.txt  Entity.cpp  GameController.cpp  InputHandler.cpp  Item.cpp  ObjectClasses.cpp  PhysicalObject.cpp  Player.cpp  Renderer.cpp  State.cpp  main.cpp  test.cpp
tests/: Angle.cpp  CMakeLists.txt  Entity.cpp  GameController.cpp  InputHandler.cpp  Item.cpp  ObjectClasses.cpp  PhysicalObject.cpp  Player.cpp  Renderer.cpp  State.cpp  test.cpp
